--- a/scss/base/_mediaqueries.scss
+++ b/scss/base/_mediaqueries.scss
@@ -168,7 +168,8 @@
     .servicioindex{
         .servicio-contenido {
             p {
-                padding: 5px;
+                padding: 5px 50px 50px 50px;
+                text-align: justify;
             }
         }
     }
@@ -221,5 +222,15 @@
                 height: 300px;
             }
         } 
+    }
+    .servicio{
+        .carousel{
+            .carousel-inner{
+                img{
+                    
+                    object-fit: cover;
+                }
+            }
+        }
     }
 }
