--- a/scss/components/_habitaciones.scss
+++ b/scss/components/_habitaciones.scss
@@ -1,6 +1,6 @@
 /*--- PAGINA DE HABITACIONES ---*/
-main{
-    .habitaciones{
+main {
+    .habitaciones {
         height: 100%;
         width: auto;
         padding-top: 30px;
@@ -12,7 +12,8 @@ main{
         background-position: center;
         box-sizing: border-box;
         flex-wrap: wrap;
-        h2{
+
+        h2 {
             margin-bottom: 50px;
             padding: 20px;
             color: aliceblue;
@@ -20,85 +21,105 @@ main{
             text-align: center;
             background-color: rgba(4, 6, 4, 0.448);
         }
-        .habitacion-comun{
+
+        .habitacion-comun {
             margin-left: 5%;
             margin-right: 5%;
             display: grid;
-            grid-template-areas: 
-            "img habitacion-comunes"
-            "img habitacion-comunes";
+            grid-template-areas:
+                "img habitacion-comunes"
+                "img habitacion-comunes";
             align-items: center;
-            img{
+
+            img {
                 width: 400px;
                 height: 270px;
                 border: 5px solid grey;
                 border-radius: 5px;
                 box-sizing: border-box;
-                box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.44);
-                -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.44);
-                -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.44);
+                box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.44);
+                -webkit-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.44);
+                -moz-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.44);
+
+                &:hover {
+                    transition-duration: 2s;
+                    transform: scale(1.1);
+                }
             }
-            .habitacion-comunes{
+
+            .habitacion-comunes {
                 padding: 30px;
-                display: flex;
+                @include flex(flex, start, center);
                 flex-wrap: wrap;
                 flex-direction: column;
-                justify-content: start;
-                align-items: center;
-                background-color: rgba(240, 248, 255, 0.221);
+                background-color: nth($colores, 3);
                 margin: 35px 50px 35px 50px;
-                h3{
-                    margin: auto;
-                    color: aliceblue;
+
+                h3 {
+                    text-align: center;
+                    margin: 25px;
+                    color: nth($colores, 1);
                     font-size: 30px;
                     font-family: Arial, Helvetica, sans-serif;
                 }
-                p{
+
+                p {
                     color: aliceblue;
                     font-size: 20px;
                     font-family: Arial, Helvetica, sans-serif;
+                    text-align: justify;
                 }
             }
         }
-        .habitacion-full{
-            margin: 25px;
-            margin-left: 5%;
-            margin-right: 5%;
-            display: grid;
-            grid-template-areas: 
+    }
+
+    .habitacion-full {
+        margin: 25px;
+        margin-left: 5%;
+        margin-right: 5%;
+        display: grid;
+        grid-template-areas:
             "img habitacion-fulles"
             "img habitacion-fulles";
-            align-items:center;
-            img{
-                width: 400px;
-                height: 270px;
-                border: 5px solid grey;
-                border-radius: 5px;
-                box-sizing: border-box;
-                box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.44);
-                -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.44);
-                -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.44);
+        align-items: center;
+
+        img {
+            width: 400px;
+            height: 270px;
+            border: 5px solid grey;
+            border-radius: 5px;
+            box-sizing: border-box;
+            box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.44);
+            -webkit-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.44);
+            -moz-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.44);
+
+            &:hover {
+                transition-duration: 2s;
+                transform: scale(1.1);
             }
-            .habitacion-fulles{
-                padding: 30px;
-                display: flex;
-                flex-wrap: wrap;
-                flex-direction: column;
-                justify-content: start;
-                align-items: center;
-                background-color: rgba(240, 248, 255, 0.221);
-                margin: 35px 50px 35px 50px;
-                h3{
-                    margin: auto;
-                    color: aliceblue;
-                    font-size: 30px;
-                    font-family: Arial, Helvetica, sans-serif;
-                }
-                p{
-                    color: aliceblue;
-                    font-size: 20px;
-                    font-family: Arial, Helvetica, sans-serif;
-                }
+        }
+
+        .habitacion-fulles {
+            padding: 30px;
+            @include flex(flex, start, center);
+            flex-wrap: wrap;
+            flex-direction: column;
+            background-color: nth($colores, 3);
+            margin: 35px 50px 35px 50px;
+
+            h3 {
+                text-align: center;
+                margin: 25px;
+                color: nth($colores, 1);
+                font-size: 30px;
+                font-family: Arial, Helvetica, sans-serif;
+            }
+
+            p {
+                color: aliceblue;
+                font-size: 20px;
+                font-family: Arial, Helvetica, sans-serif;
+                text-align: justify;
             }
         }
     }
