--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -2,6 +2,7 @@
 main {
     .bienvenidos {
         background-image: url(../img/welcome.jpg);
+        opacity: 0.9;
         background-attachment: fixed;
         background-repeat: no-repeat;
         object-fit: fill;
@@ -33,158 +34,45 @@ main {
                 padding-right: 30%;
             }
         }
-    }
-
-    .servicioindex {
-        padding-top: 80px;
-        padding-bottom: 80px;
-        height: auto;
-        width: auto;
-        background-image: url(../img/sombrilla.jpg);
-        object-fit: fill;
-        background-attachment: fixed;
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center;
-        padding-bottom: 50px;
-
-        h2 {
-            padding-top: 40px;
-            padding-bottom: 40px;
-            background-color: nth($colores,5);
-            font-size: 45px;
-            text-align: center;
-            color: nth($colores,1);
-        }
-
-        .servicio-contenido {
-            font-size: 30px;
-            @include flex(flex,center,center);
-            flex-wrap: wrap;
-            flex-direction: column;
-            box-sizing: border-box;
+        
+        .servicioindex {
+            padding-top: 80px;
+            padding-bottom: 80px;
             height: auto;
-
-            p {
-                padding: 10px 5px 50px 5px;
-                font-size: 20px;
-                color: nth($colores,1);
-                font-family: Arial, Helvetica, sans-serif;
-                text-decoration: solid;
-                background-color: nth($colores,5);
-            }
-        }
-    }
-
-    .habitaciones {
-        height: 100%;
-        width: auto;
-        padding-top: 30px;
-        padding-bottom: 50px;
-        background-image: url(../img/pasillo.jpg);
-        object-fit: cover;
-        background-attachment: fixed;
-        background-repeat: no-repeat;
+            width: auto;
+            background-image: url(../img/sombrilla.jpg);
+            object-fit: fill;
+            background-attachment: fixed;
+            background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
-        box-sizing: border-box;
-        flex-wrap: wrap;
-
-        h2 {
-            margin-bottom: 50px;
-            padding: 20px;
-            color:nth($colores,1);
-            font-size: 50px;
-            text-align: center;
-            background-color: nth($colores,4);
-        }
-
-        .habitacion-comun {
-            margin-left: 5%;
-            margin-right: 5%;
-            display: grid;
-            grid-template-areas:
-                "img habitacion-comunes"
-                "img habitacion-comunes"
-            ;
-            align-items: center;
-
-            img {
-                width: 400px;
-                height: 270px;
-                border: 5px solid nth($colores,2);
-                border-radius: 5px;
-                box-sizing: border-box;
-                box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.44);
-                -webkit-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.44);
-                -moz-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.44);
-                &:hover{
-                    transition-duration: 2s;
-                    transform: scale(1.1);
-                }
+        padding-bottom: 50px;
+            h2 {
+                padding-top: 40px;
+                padding-bottom: 40px;
+                background-color: nth($colores,5);
+                font-size: 45px;
+                text-align: center;
+                color: nth($colores,1);
             }
 
-            .habitacion-comunes {
-                padding: 30px;
-                @include flex(flex, start, center);
+            .servicio-contenido {
+                font-size: 30px;
+                @include flex(flex,center,center);
                 flex-wrap: wrap;
                 flex-direction: column;
-                background-color:nth($colores,3);
-                margin: 35px 50px 35px 50px;
-
-                h3 {
-                    text-align: center;
-                    margin: 25px;
-                    color: nth($colores,1);
-                    font-size: 30px;
-                    font-family: Arial, Helvetica, sans-serif;
-                }
-            }
-        }
-
-        .habitacion-full {
-            margin: 25px;
-            margin-left: 5%;
-            margin-right: 5%;
-            display: grid;
-            grid-template-areas:
-                "img habitacion-fulles"
-                "img habitacion-fulles"
-            ;
-            align-items: center;
-
-            img {
-                width: 400px;
-                height: 270px;
-                border: 5px solid nth($colores,2);
-                border-radius: 5px;
                 box-sizing: border-box;
-                box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.44);
-                -webkit-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.44);
-                -moz-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.44);
-                &:hover{
-                    transition-duration: 2s;
-                    transform: scale(1.1);
-                }
-            }
+                height: auto;
 
-            .habitacion-fulles {
-                padding: 30px;
-                @include flex(flex, start, center);
-                flex-wrap: wrap;
-                flex-direction: column;
-                background-color: nth($colores,3);
-                margin: 35px 50px 35px 50px;
-
-                h3 {
-                    text-align: center;
-                    margin: 25px;
+                p {
+                    padding: 10%;
+                    text-align: justify;
+                    font-size: 20px;
                     color: nth($colores,1);
-                    font-size: 30px;
                     font-family: Arial, Helvetica, sans-serif;
+                    text-decoration: solid;
+                    background-color: nth($colores,5);
                 }
-            }
-
         }
     }
 
@@ -217,22 +105,4 @@ main {
             }
         }
     }
-
-    .ubicacion {
-        width: auto;
-        height: 90vh;
-        @include flex(flex, space-around, center);
-        background-color:nth($colores,1);
-        box-sizing: border-box;
-        flex-wrap: wrap;
-
-        h2 {
-            width: 100%;
-            font-size: 45px;
-            text-align: center;
-            padding-top: 20px;
-            padding-bottom: 20px;
-            color: nth($colores,1);
-            background-color: nth($colores,5);
-        }
-    }
+}
