--- a/scss/components/_servicio.scss
+++ b/scss/components/_servicio.scss
@@ -1,7 +1,6 @@
 /*--- PAGINA DE SERVICIO ---*/
 main{
     .servicio{
-        padding-top: 50px;
         height: auto ;
         width: auto;
         background-image: url(../img/sombrilla.jpg);
@@ -18,28 +17,12 @@ main{
             text-align: center;
             color: white;
         }
-        .servicio-contenido{
-            font-size: 30px;
-            display: flex;
-            flex-wrap: wrap;
-            flex-direction: column  ;
-            justify-content: center;
-            text-align: center;
-            box-sizing: border-box;
-            height: auto;
-            .imagen-container{
-                display: grid;
-                grid-template-columns: repeat(3,1fr);
-                gap: 5px;
-                .grid-item{
+        .carousel{
+            margin: 20px;
+            .carousel-inner{
+                .carousel-item{
                     img{
-                        border: 7px solid rgb(60, 50, 50);
-                        border-radius: 5px;
-                        width: 370px;
-                        height: 280px;
-                        box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.44);
-                        -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.44);
-                        -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.44);
+                        height: 80vh ;
                         object-fit: cover;
                     }
                 }
