--- a/scss/components/_ubicacion.scss
+++ b/scss/components/_ubicacion.scss
@@ -1,15 +1,16 @@
 /*---PAGINA DE UBICACION ---*/
-main{
-    .ubicacion{
+main {
+    .ubicacion {
         width: auto;
         height: 90vh;
-        display: flex;
+        /*display: flex;
         justify-content: space-around;
-        align-items: center;
-        background-color:rgba(250, 235, 215, 0.847);
+        align-items: cen ter;*/
+        background-color: rgba(250, 235, 215, 0.847);
         box-sizing: border-box;
         flex-wrap: wrap;
-        h2{
+
+        h2 {
             width: 100%;
             font-size: 45px;
             text-align: center;
@@ -18,13 +19,21 @@ main{
             color: aliceblue;
             background-color: rgba(0, 0, 0, 0.636);
         }
-        p{
-            padding: 20px;
-            font-size: 20px;
-            color: aliceblue;
-            font-family: Arial , Helvetica, sans-serif;
-            text-decoration: solid;
-            background-color: rgba(0, 0, 0, 0.636);
-        }
+
+        .contenidoUbicacion {
+            margin: 5%;
+            @include flex (flex, space-around, center) 
+            }
+            .p {
+                padding: 50px;
+                font-size: 20px;
+                color: aliceblue;
+                font-family: Arial, Helvetica, sans-serif;
+                text-decoration: solid;
+                background-color: rgba(0, 0, 0, 0.636);
+            }
+            .mapa{
+                margin: 50px;
+            }
     }
 }
